# sypha

./: .dockerignore  .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  Makefile  README.md  docker-compose.yml  sypha
benchmark/: .dockerignore  Dockerfile  README.md  benchmark.py  compare_results.py  docker-compose.yml  ortools_solver.py  requirements.txt  run_sypha_benchmark.sh  scp_parser.py  test_cuda_solver.py
data/: demo00.txt  scp_demo00.txt  scp_demo01.txt  scp_demo02.txt  scp_demo03.txt  scp_demo04.txt  scp_demo05.txt  scp_demo06.txt  scp_demo07.txt  scp_demo08.txt  scp_demo09.txt  scp_demo10.txt  scp_demo11.txt  scp_demo12.txt  scp_demo13.txt  scp_demo14.txt  scp_demo15.txt  scp_demo16.txt  scp_demo17.txt  scp_demo18.txt  scp_demo19.txt  scp_demo20.txt  scp_demo21.txt  scp_demo22.txt  scp_demo23.txt  scp_demo24.txt  scp_demo25.txt  scp_demo26.txt  scp_demo27.txt  scp_demo28.txt  scp_demo29.txt  scp_demo30.txt  scp_demo31.txt  scp_demo32.txt  scp_demo33.txt  scp_demo34.txt  scp_demo35.txt  scp_demo36.txt  scp_demo37.txt  scp_demo38.txt  (+21 more)
examples/: scp_solver.cpp
python/: interior_point.py  main.py  minima_distribution.py  model_importer.py  simplex.py  sypha_unit_tests.py  utils.py
results/: result_20200628_1809.csv  result_20200628_1814.csv  result_20200628_1820.csv  result_20200628_1934.csv  result_20200628_1937.csv  result_20200628_2118.csv  result_20200628_2306.csv  result_20200628_2321.csv  result_20200628_2351.csv  result_20200629_1919.csv  result_20200629_2037.csv
src/: a.out  common.cpp  common.h  cusolver_ex1.cpp  cusolver_test.cpp  (+52 more)
(+14 files in other folders)
